--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "reddit-clone-server",
   "version": "0.0.1",
   "description": "A server for the Udacity Reddit Clone project for ReactND",
-  "main": "index.js",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && yarn --production=false && yarn build"
+  },
   "keywords": [
     "udacity",
     "redux",
