--- a/package.json
+++ b/package.json
@@ -21,5 +21,6 @@
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
     "clone": "^2.1.1"
-  }
+  },
+  "cacheDirectories": ["client/node_modules", "node_modules"]
  }
